@@ -1,5 +1,5 @@
 /*
- *  (c) Copyright The SIMILE Project 2006. All rights reserved.
+ *  (c) Copyright The SIMILE Project 2008. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -26,4 +26,10 @@
  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
  * THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  *
+ * Note: JQuery, www.jquery.com is included in this distribution. It is 
+ *       covered by its own license:  
+ *
+ *       Copyright (c) 2008 John Resig (jquery.com)
+ *       Dual licensed under the MIT (MIT-LICENSE.txt)
+ *       and GPL (GPL-LICENSE.txt) licenses.
  */
