@@ -1949,6 +1949,14 @@ C.select();
 }};
 return G;
 };
+SimileAjax.Graphics.getWidthHeight=function(C){var A,B;
+if(C.getBoundingClientRect===null){A=C.offsetWidth;
+B=C.offsetHeight;
+}else{var D=C.getBoundingClientRect();
+A=Math.ceil(D.right-D.left);
+B=Math.ceil(D.bottom-D.top);
+}return{width:A,height:B};
+};
 SimileAjax.Graphics.getFontRenderingContext=function(A,B){return new SimileAjax.Graphics._FontRenderingContext(A,B);
 };
 SimileAjax.Graphics._FontRenderingContext=function(A,B){this._elmt=A;
@@ -1961,17 +1969,12 @@ SimileAjax.Graphics._FontRenderingContext.prototype.dispose=function(){this._elm
 SimileAjax.Graphics._FontRenderingContext.prototype.update=function(){this._elmt.innerHTML="A";
 this._lineHeight=this._elmt.offsetHeight;
 };
-SimileAjax.Graphics._FontRenderingContext.prototype.computeSize=function(F,B){var D=this._elmt;
-D.innerHTML=F;
-D.className=B===undefined?"":B;
-var A,C;
-if(D.getBoundingClientRect===null){A=D.offsetWidth;
-C=D.offsetHeight;
-}else{var E=D.getBoundingClientRect();
-A=Math.ceil(E.right-E.left);
-C=Math.ceil(E.bottom-E.top);
-}D.className="";
-return{width:A,height:C};
+SimileAjax.Graphics._FontRenderingContext.prototype.computeSize=function(D,B){var C=this._elmt;
+C.innerHTML=D;
+C.className=B===undefined?"":B;
+var A=SimileAjax.Graphics.getWidthHeight(C);
+C.className="";
+return A;
 };
 SimileAjax.Graphics._FontRenderingContext.prototype.getLineHeight=function(){return this._lineHeight;
 };
